# claude-conversation-extractor

./: CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
.github/workflows/: test.yml
src/: __init__.py  constants.py  extract_claude_logs.py  interactive_ui.py  realtime_search.py  search_cli.py  search_conversations.py
tests/: test_extract_claude_logs_aligned.py  test_interactive_ui.py  test_search_conversations_aligned.py
vscode-extension/: package.json
vscode-extension/src/: extension.ts
