[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-extract-ni"
version = "1.2.0"
description = "Non-interactive CLI for extracting, searching, and backing up Claude Code conversations. Optimized for Claude Code agent automation."
readme = "README.md"
authors = [
    {name = "Dustin Kirby"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Communications :: Chat",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Natural Language :: English",
]
keywords = [
    "export-claude-code-conversations", "claude-conversation-extractor",
    "claude-code-export-tool", "backup-claude-code-logs", "save-claude-chat-history",
    "claude-jsonl-to-markdown", "extract-claude-sessions", "claude-code-no-export-button",
    "where-are-claude-code-logs-stored", "claude-terminal-logs", "anthropic-claude-code",
    "search-claude-conversations", "claude-code-logs-location", "~/.claude/projects",
    "export-claude-conversations", "extract-claude-code", "backup-claude-sessions"
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/MiaouLeChat929/claude-conversation-extractor"
Documentation = "https://github.com/MiaouLeChat929/claude-conversation-extractor#readme"
Repository = "https://github.com/MiaouLeChat929/claude-conversation-extractor"
Issues = "https://github.com/MiaouLeChat929/claude-conversation-extractor/issues"

[project.scripts]
claude-extract = "extract_claude_logs:main"
claude-search = "search_cli:main"

[tool.setuptools]
py-modules = ["extract_claude_logs", "search_conversations", "search_cli"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]